added cloudinary fix for multiple images
